# notify-todo

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
client/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: api.js  api.ts  main.js  main.tsx  store.js  store.ts
client/src/pages/: Layout.js  Layout.tsx  Login.js  Login.tsx  Projects.js  Projects.tsx  Register.js  Register.tsx  Settings.js  Settings.tsx  Today.js  Today.tsx  _layout.js  _layout.tsx
docs/: api.md
server/alembic/: README  env.py
server/alembic/versions/: 20250918_0001_init_models.py
server/app/: main.py
server/app/api/routes/: auth.py  integrations.py  projects.py  users.py  ws.py
server/app/core/: config.py  redis.py
server/app/db/: base.py  session.py
server/app/models/: board.py  integration.py  project.py  subtask.py  task.py  user.py
server/app/schemas/: common.py  project.py  user.py
server/app/services/: blinko.py  integrations.py
server/app/utils/: deps.py  scheduler.py  security.py
