[project]
name = "todolist-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.112",
	"uvicorn[standard]>=0.30",
	"SQLAlchemy[asyncio]>=2.0",
	"asyncpg>=0.29",
	"pydantic-settings>=2.4",
	"python-jose[cryptography]>=3.3",
	"passlib[bcrypt]>=1.7",
	"redis>=5.0",
	"httpx>=0.27",
	"apscheduler>=3.10",
	"python-multipart>=0.0.9",
    "pydantic[email]>=2.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = {"app" = "server/app"}

[project.scripts]
dev-server = "uvicorn:main"
